1.41
	- ('Greg' is Greg Sabino Mullane, greg@turnstep.com)
	- Fix CPAN bug #12004: commit and rollback now return true
		[Greg] (thanks to ivan-dbdpg@420.am)
	- Overhaul and update COPY support; use new protocol.
		New dbh methods: pg_putline, pg_getline, pg_endcopy.
		[Greg]
	- Rewrote version detection code. Compiled version and target 
		version are now available via $dbh->{pg_lib_version} and 
		$dbh->{pg_server_version} [Greg]
	- Set our default type_id to 0, not 1043 (VARCHAR) when possible.
		Suggested by Abhijit Menon-Sen via David Wheeler. [Greg]
	- Add $dbh methods pg_savepoint(), pg_rollback_to(), and pg_release()
		[Stephen Clouse] [Greg]
1.40 Tue Feb 22 06:06:45 UTC 2005
	- Raise required DBI version to 1.38
	- Execute returns 0 (0E0) not -1 for successful DDL commands.
		[Robert Treat]
	- Change all string lengths to use STRLEN
		[rink@stack.nl]
	- Added $dbh->pg_server_trace($fh) [Greg Sabino Mullane]
	- Added $dbh->{pg_errorlevel}. [Greg Sabino Mullane]
	- Fix utf8 quote() support [Dominic Mitchell <dom@semantico.com>]
	- Added explicit support for types SQL_BOOLEAN, DATE, TIME, 
		TIMESTAMP, and TIMESTAMPTZ. Return correct values for 
		DATEOID and TIMEOID. [Greg Sabino Mullane]
	- Added tablespace support for table_info and primary_key_info.
		[Greg Sabino Mullane]
	- Added new attributes to $dbh: pg_db, pg_user, pg_pass,
		pg_host, pg_port, pg_options, pg_socket, pg_pid
		[Greg Sabino Mullane]
	- Minor fixes in quote.c, dbdimp.c, and types.h
		[Christophe Martin: schplurtz at free.fr]
	- Added support for SQLSTATE via $dbh->state and $sth->state
		[Greg Sabino Mullane]
	- Major overhaul of prepare/execute to handle new server-side 
		prepare system. See Pg.pm for details. [Greg Sabino Mullane]
	- Make the tests honor the DBD_SCHEMA variable instead of 
		assuming that the "public" schema is available.
		[Rainer Weikusat]
	- dbdimp.c cleanups: better error messages, ensure commit
		is only called once after a transaction fails.
		[Alexey Slynko]