@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-Pg
-version:      1.40_04
+version:      1.41
 version_from: Pg.pm
 installdirs:  site
 requires:
