@@ -4,10 +4,10 @@ Known Issues:
 
 TODO: 
 
+- Implement advanced SQL parsing, based on stuff in PG (see psql)
 - Support for new error protocol
 - Support new DBI trace scheme.
-- Finish implementing COPY with new protocol.
-- Support Win32
+- Create a .ppm for Windows
 - Change quote and dequote functions to take Sv instead of string so that
    things like arrays can be serialized by the quote function.  This will
    take care of broken chopblanks and pg_bool_tf (pass the  quote/dequote 
@@ -19,4 +19,3 @@ TODO:
 - quoting/dequoting of arrays.
 - allow user callbacks to quote user-defined types?
 - rename functions and add defines to avoid problems with static linking of multi DBDs
-
